# sm-ext-soundlib

./: .gitmodules  CMakeLists.txt  README.md
sdk/: sdk.cmake
src/: CMakeLists.txt  extension.cpp  extension.h  natives.cpp  smsdk_config.h  soundfile.cpp  soundfile.h  systemfilestream.cpp  systemfilestream.h  valvefilestream.cpp  valvefilestream.h
